Push content for prod docs

--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -135,7 +135,14 @@ While Setu provides required data to the configured webhook, we also have an API
 
 ##### Notifications
 
-Below is a summary of the API endpoints you need to implement on your server and expose to receive notifications from Setu. These notifications are webhooks from Setu, based on the events that occur during the consent and data flow.
+Below are the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. These notifications are sent by Setu when the end user makes a payment and when banking partners send bank account details of the end user.
+
+<Callout type="tip">
+    Please send back HTTP 200 status code if the request sent was processed
+    correctly to avoid receiving multiple notifications for the same payment
+    event. Response body is ignored.
+</Callout>
+<br />
 
 The `base_url` is the server URL you share with us to receive notifications.
 To get started quickly, you can setup a mock API endpoint using <a href="https://beeceptor.com/" target="_blank">Beeceptor</a>. Once configured, Setu will send notifications to that URL. This will help you understand the notification flow before you start to implement it on your server.
