--- a/content/investments/deposits/integrate-sdk/android.mdx
+++ b/content/investments/deposits/integrate-sdk/android.mdx
@@ -175,6 +175,15 @@ This is a sample implementation of invoking our FD SDK in Android.
     JSONObject getPrefillsTheme() throws JSONException {
         JSONObject theme = new JSONObject();
         theme.put("logoUrl", "https://image.shutterstock.com/image-vector/abstract-vector-logo-design-template-600w-1971786323.jpg");
+        theme.put("primaryColor", "#3742FA");
+        theme.put("secondaryColor", "#E2ECFC");
+        theme.put("primaryTextColor", "#1A202C");
+        theme.put("secondaryTextColor", "#A0AEC0");
+        theme.put("hoverOnPrimaryColor", "#2C3AFA");
+        theme.put("inputFieldBackgroundColor", "#F7FAFC");
+        theme.put("inputFieldBorderColor", "#3742FA");
+        theme.put("cardColor", "#FFFFFF");
+        theme.put("globalBackgroundColor", "#F7FAFC");
         return theme;
     }
     // Set amount, tenue and KYC params
