--- a/content/investments/deposits/integrate-sdk/ios.mdx
+++ b/content/investments/deposits/integrate-sdk/ios.mdx
@@ -146,6 +146,15 @@ class ViewController: UIViewController, WKNavigationDelegate, WKUIDelegate {
         var redirectTo: RedirectTo = RedirectTo()
         struct Theme: Codable {
             var logoUrl: String = "https://image.shutterstoc.com/image-vector/abstract-vector-logo-design-template-600w-1971786323.jpg"
+            var primaryColor: String = "#3742FA"
+            var secondaryColor: String = "#E2ECFC"
+            var primaryTextColor: String = "#1A202C"
+            var secondaryTextColor: String = "#A0AEC0"
+            var hoverOnPrimaryColor: String = "#2C3AFA"
+            var inputFieldBackgroundColor: String = "#F7FAFC"
+            var inputFieldBorderColor: String = "#3742FA"
+            var cardColor: String = "#FFFFFF"
+            var globalBackgroundColor: String = "#F7FAFC"
         }
         struct Prefills: Codable {
             var amount: Int = 25000
