--- a/content/payments/whatsapp-collect/api-integration.mdx
+++ b/content/payments/whatsapp-collect/api-integration.mdx
@@ -80,8 +80,15 @@ In this mode, you would know the amount to be collected beforehand and pass the 
         "additionalInfo": { //Optional, with custom key, value pairs
         },
         "amountExactness": "EXACT_DOWN", // Mandatory
-        "transactionNote": "Loan Repayment of 200rs" // Optional
-        "campaignID": "WA-Coll-Apr-2022" // Optional
+        "transactionNote": "Loan Repayment of 200rs", // Optional
+        "campaignID": "WA-Coll-Apr-2022", // Optional
+        "settlement": { // Optional
+          "primaryAccount": {
+            "id": "123467890", // Mandatory
+            "ifsc": "IFSC12345", // Mandatory
+            "name": "" // Optional
+          }
+        }
     },
     "channels": [{
         "destination": "918147077475", // Mandatory
@@ -107,6 +114,7 @@ In this mode, you would know the amount to be collected beforehand and pass the 
 - `bill.transactionNote` is a field that allows you to display a note on the Payer application.
 - `bill.campaignID` is a field that allows you to group payment links and view all payments with the same `bill.campaignID` on Bridge Dashboard.
 - `channels.campaignID` is a Setu internal Campaign ID that maps to a specific Collection Template and Acknowledgement Template.
+- `bill.settlement` is a dictionary that allows you to specify the details of whitelisted account(s) to which the amount paid needs to be settled to.
 
 Note that UPI does not recognise a “maximum allowed amount” and any payment value above INR 1 will be successful with `EXACT_DOWN`.
 
