--- a/content/data/pan/quickstart.mdx
+++ b/content/data/pan/quickstart.mdx
@@ -75,7 +75,7 @@ While testing on Sandbox, you may use the following sample values—
           <CodeBlockWithCopy language="json">
             {`{ 
   "data": { 
-    "aadhaar_seeding_status": "LINKED", ##optional
+    "aadhaar_seeding_status": "LINKED", // optional
     "category": "Individual", 
     "full_name": "John Doe"
   }, 
