update pan api response (#2)

--- a/content/data/pan/quickstart.mdx
+++ b/content/data/pan/quickstart.mdx
@@ -75,11 +75,13 @@ While testing on Sandbox, you may use the following sample values—
           <CodeBlockWithCopy language="json">
             {`{ 
   "data": { 
+    "aadhaar_seeding_status": "LINKED", // optional
     "category": "Individual", 
-    "full_name": "John Doe" 
+    "full_name": "John Doe"
   }, 
   "message": "PAN is valid", 
-  "verification": "success" 
+  "verification": "success",
+  "traceId": "1-6346a91a-620cf6cc4f68d2e30316881e" 
 }    `}
           </CodeBlockWithCopy>
         </>
