title of statuscode fixed

--- a/content/data/digilocker/quickstart.mdx
+++ b/content/data/digilocker/quickstart.mdx
@@ -304,8 +304,7 @@ Call this API to get status of a DigiLocker request.
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> The DigiLocker request
-                has expired.
+               <Badge type="failure">NOT FOUND</Badge> The request id is invalid/expired.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -773,11 +772,11 @@ Call this API to fetch document of a user from DigiLocker.
         },
         {
           key: "5",
-          label: "400",
+          label: "401",
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> User not authenticated
+                <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -818,7 +817,7 @@ Call this API to fetch document of a user from DigiLocker.
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> User token has been
+                <Badge type="failure">UNAUTHORIZED</Badge> User token has been
                 revoked. Generate a fresh DigiLocker request.
               </p>
               <hr className="tertiary" />
@@ -861,8 +860,7 @@ Call this API to fetch document of a user from DigiLocker.
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> The DigiLocker request
-                has expired.
+               <Badge type="failure">NOT FOUND</Badge> The request id is invalid/expired.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -1061,7 +1059,7 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> User not authenticated
+                <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -1091,7 +1089,7 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> User token has been
+                <Badge type="failure">UNAUTHORIZED</Badge> User token has been
                 revoked. Generate a fresh DigiLocker request.
               </p>
               <hr className="tertiary" />
@@ -1122,8 +1120,7 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           content: (
             <>
                <p>
-                <Badge type="failure">BAD REQUEST</Badge> The DigiLocker request
-                has expired.
+                <Badge type="failure">NOT FOUND</Badge> The request id is invalid/expired.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -1153,7 +1150,7 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           content: (
             <>
               <p>
-                <Badge type="failure">BAD REQUEST</Badge> Failed to get user's Aadhaar XML.
+                <Badge type="failure">>INTERNAL SERVER ERROR</Badge> Failed to get user's Aadhaar XML.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -1255,7 +1252,7 @@ Call this API to revoke a DigiLocker request. The request id can no longer be us
           content: (
             <>
              <p>
-                <Badge type="failure">BAD REQUEST</Badge> User not authenticated
+                <Badge type="failure">UNAUTHORIZED</Badge> User is not authenticated to access this resource
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -1285,8 +1282,7 @@ Call this API to revoke a DigiLocker request. The request id can no longer be us
           content: (
             <>
              <p>
-                <Badge type="failure">BAD REQUEST</Badge> The DigiLocker request
-                has expired.
+               <Badge type="failure">NOT FOUND</Badge> The request id is invalid/expired.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
