--- a/content/data/digilocker/quickstart.mdx
+++ b/content/data/digilocker/quickstart.mdx
@@ -1150,7 +1150,7 @@ Call this API to fetch the Aadhaar data of a user from DigiLocker. The Aadhaar X
           content: (
             <>
               <p>
-                <Badge type="failure">>INTERNAL SERVER ERROR</Badge> Failed to get user's Aadhaar XML.
+                <Badge type="failure">INTERNAL SERVER ERROR</Badge> Failed to get user's Aadhaar XML.
               </p>
               <hr className="tertiary" />
               <h5>Request</h5>
